css/index.css
@import url("https://fonts.googleapis.com/css?family=Playfair+Display|Raleway&display=swap");

:root {
  --hover-color: rgba(51, 204, 102, 1);
  --header-shadow: rgba(30, 20, 80, 0.1);
  --video-background: rgba(131, 173, 181, 0.9);
  --button-color: rgba(46, 64, 69, 1);
  --button-text: rgba(236, 250, 240, 1);
  --link-color: rgba(236, 250, 240, 1);
  --background-color: rgba(254, 254, 253, 1);
  --header-color: rgba(254, 254, 254, 1);
  --menu-nav-button-color: rgba(46, 64, 69, 0.9);
  --menu-nav-button-hover: rgba(46, 64, 69, 1);
  --menu-nav-button-text: rgba(236, 250, 240, 1);
  --title-font: "Playfair Display";
  --main-font: "Raleway";
  --link-font: "Raleway";
}
html,
body {
  height: 100%;
  margin: 0;
  font-family: var(--main-font);
  background-color: var(--background-color);
}
a,
a:active {
  color: var(--link-color);
  text-decoration: none;
  font-family: var(--link-font);
}
#alert {
  width: 100%;
  height: 1.3rem;
  text-align: center;
  padding-top: 0.2rem;
  color: white;
  background-color: red;
  margin: 0;
}
.header__nav {
  text-align: center;
}
#nav__menu {
  list-style: none;
  /* display: flex;
  flex-direction: column; */
  text-align: left;
  font-size: 1.8rem;
}
.header__title {
  font-family: var(--title-font);
  padding: 0.2rem;
  display: flex;
  align-items: center;
  justify-content: space-around;
  box-shadow: 0 4px 2px -3px var(--header-shadow);
  top: 0;
  position: sticky;
  height: 4rem;
  background: white;
}
.title__icon {
  font-size: 2rem;
  cursor: pointer;
}
.title__text {
  font-size: 3rem;
}
.title__spacer {
  width: 2rem;
}
.body__main {
  margin: 1rem;
  display: flex;
  flex-direction: column;
  background-color: var(--video-background);
  background-image: url("../img/paper.png");
  background-repeat: repeat;
  background-blend-mode: multiply;
  border-radius: 0.25rem;
}
.main__img {
  border-radius: 0.25rem;
}
.main__video {
  margin: 0.5rem;
  display: flex;
  justify-content: center;
}
.video__content {
  margin: 0.5rem;
  height: 15rem;
  width: 20rem;
  background-color: black;
  box-shadow: -15px 15px 1px -2px var(--video-background);
}
.main__text {
  font-size: 1.2rem;
  text-align: justify;
}
.text__content {
  padding: 0.2rem 1.5rem;
}
.main__button {
  background-color: var(--button-color);
  color: var(--button-text);
  margin: auto;
  display: block;
  padding: 8px 12px;
  border-radius: 25px;
  cursor: pointer;
  font-size: 1.5rem;
  margin-top: -20px;
  border: none;
}
.body__menu {
}
.menu__nav {
  list-style: none;
  width: 100%;
  padding: 0;
  margin-bottom: 0;
  margin-top: 2rem;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  font-size: 1.8rem;
  color: var(--menu-nav-button-text);
}
.menu__nav li {
  background-color: var(--menu-nav-button-color);
  width: 100%;
  padding: 1rem;
  text-align: center;
  cursor: pointer;
  font-family: var(--title-font);
}
.menu__nav li:hover {
  background-color: var(--menu-nav-button-hover);
  text-decoration:underline;
}
.menu {
  padding: 0.5rem 2rem 2rem 2rem;
}
.lunch__menu,
.dinner__menu {
  columns: 2;
  column-gap: 3.2rem;
  list-style: none;
  padding: 0.2rem;
  margin: 0;
}
.menu__banner {
  text-align: center;
  margin-bottom: 0.8rem;
}
.banner__title {
  font-size: 2rem;
  margin: 0.5rem;
}
.banner__subtitle {
  margin: 0;
}
.banner__subtitle-bold {
  font-weight: 600;
  font-style: italic;
  margin: 0;
}
.menu__item {
  break-inside: avoid-column;
  page-break-inside: avoid;
  margin-bottom: 0.8rem;
}
.item__name {
  font-size: 1rem;
  text-align: left;
  margin: 0;
  font-weight: bolder;
}
.item__price {
  float: right;
  font-size: 0.95rem;
}
.item__desc {
  font-size: 0.85rem;
  margin: 0 0.15rem;
}
.item__submenu {
  font-size: 0.8rem;
  padding-left: 1.8rem;
}
.submenu__price {
  float: right;
  margin: 0;
}
.invisible {
  display: none;
}

